--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "react-github-profile",
   "version": "0.1.0",
-  "private": true,
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/GithubProfile.js"
+    }
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^4.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -34,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "tailwindcss": "^3.4.3"
   }
 }
