--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-github-profile",
   "version": "0.1.2",
+  "author": "Your Name <tommypurcelljr@gmail.com>",
   "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,9 +15,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "babel src -d dist",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": [
