--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-github-profile",
   "version": "0.1.3",
   "author": "Your Name <tommypurcelljr@gmail.com>",
+  "main": "dist/index.js",
   "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -39,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
