--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-github-profile",
   "version": "0.1.6",
   "author": "Your Name <tommypurcelljr@gmail.com>",
-  "main": "GithubProfile.js",
+  "main": "dist/GithubProfile.js",
   "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
