--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "dev": "vite"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
@@ -19,10 +20,15 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "rollup": "^4.18.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "^5.4.5"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.0"
   },
   "dependencies": {
     "axios": "^1.7.2",
