--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "module": "dist/index.esm.js",
   "scripts": {
     "build": "rollup -c",
-    "dev": "vite"
+    "dev": "vite",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
@@ -28,7 +29,11 @@
     "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6"
   },
   "dependencies": {
     "axios": "^1.7.2",
