--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-github-profile",
-  "version": "0.1.9",
-  "author": "Tommy Purcell <tommypurcelljr@gmail.com",
+  "version": "0.2.1",
+  "author": "Tommy Purcell <tommypurcelljr@gmail.com>",
+  "repository": "grubersjoe/react-github-calendar",
   "type": "module",
   "description": "A React component for displaying a Github Profile",
   "main": "dist/index.js",
@@ -23,17 +24,17 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "rollup": "^4.18.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "vite": "^5.2.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6"
+    "vite": "^5.2.0"
   },
   "dependencies": {
     "axios": "^1.7.2",
