--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-github-profile",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "author": "Tommy Purcell <tommypurcelljr@gmail.com>",
   "repository": "tommypurcell/react-github-profile",
   "type": "module",
@@ -38,11 +38,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "react-github-calendar": "^4.1.3"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-github-calendar": "^4.1.3"
+    "react-dom": "^18.2.0"
   }
 }
